--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-streamlit>=1.28.0
-pandas>=1.5.0
+streamlit==1.28.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+google-generativeai==0.3.0
+python-docx==1.1.0
+semantic-scholar==0.3.0
